Added JWT Token features and aspect for checking user claims

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOptions": {
+    "Audience": "www.calenderhistory.com",
+    "Issuer": "www.calenderhistory.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "!z2x3C4v5B*_*!z2x3C4v5B*_*"
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=CalenderHistory;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
