Caching feature added as AOP aspect. Removed disposed dbContext error.

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -3,7 +3,7 @@
     "Audience": "www.calenderhistory.com",
     "Issuer": "www.calenderhistory.com",
     "AccessTokenExpiration": 10,
-    "SecurityKey": "!z2x3C4v5B*_*!z2x3C4v5B*_*"
+    "SecurityKey": "!z2x3C4v5B*_*!z2x3C4v5B*_*823tyhg**_54"
   },
 
   "ConnectionStrings": {
